--- a/signup.html
+++ b/signup.html
@@ -51,8 +51,8 @@
       </nav>
   
     <!-- nav bar -->
-    <div class="text-center">
-        <span class="text-center text-dark fs-3 my-5 py-4">
+    <div class="signupform text-center py-4">
+        <span class="text-center text-dark fs-3 ">
             Create your Account
         </span>
 
