--- a/districts.html
+++ b/districts.html
@@ -3,6 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kerala_Tourism</title>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
@@ -26,8 +27,8 @@
     <nav class="navbar navbar-expand-sm navbar-light px-4 border-bottom  text-black ">
         <div class="container-fluid">
             <div class="logo text-center">
-          <a class="navbar-brand" href="about.html"><img class="img-fluid" src="https://scontent.fcok6-1.fna.fbcdn.net/v/t39.30808-6/302178242_398176022479672_2018082237890165057_n.png?_nc_cat=101&ccb=1-7&_nc_sid=efb6e6&_nc_ohc=EA7B1ZVxKU0AX9u34r2&_nc_ht=scontent.fcok6-1.fna&oh=00_AfAq-MjsBr1lrWmEvCZPUBNAETB9MQ4ovtljmWrdBkldxQ&oe=656F6843" 
-             alt="keralatourism logo"> <br>keralatourism.com
+            <a class="navbar-brand" href="about.html"><img class="img-fluid" src="https://scontent.fcok6-1.fna.fbcdn.net/v/t39.30808-6/302178242_398176022479672_2018082237890165057_n.png?_nc_cat=101&ccb=1-7&_nc_sid=efb6e6&_nc_ohc=EA7B1ZVxKU0AX9u34r2&_nc_ht=scontent.fcok6-1.fna&oh=00_AfAq-MjsBr1lrWmEvCZPUBNAETB9MQ4ovtljmWrdBkldxQ&oe=656F6843" 
+            alt="keralatourism logo"> <br>keralatourism.com
             <br><i class="fa-brands fa-facebook fa-beat px-3" style="color: #1d0f83; "></i>
             <i class="fa-brands fa-youtube fa-beat" style="color: #cf7712;"></i>
             <i class="fa-brands fa-instagram fa-beat px-3"></i>
@@ -45,7 +46,7 @@
                 <a class="nav-link" href="districts.html">Districts</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Contact Us</a>
+                <a class="nav-link" href="contact.html">Contact Us</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="signup.html">Sign up</a>
@@ -60,17 +61,17 @@
   
     <!-- nav bar -->
     <section class="districtlist text-dark">
-        <div class="container-fluid text-center my-5 py-5">
+        <div class="container-fluid text-center my-5 py-5"data-aos="fade-up" data-aos-offset="300">
             <div class="districtbgclr">
                 <div class="row">
                     <div class="districtmap col-12 fw-bolder ">
                         <h1>EXPLORE<span class="text-dark"> KERALA</span></h1><hr>
-                        <img src="https://wallpapercave.com/dwp1x/wp9363393.png" alt="image">
+                        <img src="https://wallpapercave.com/dwp1x/wp9363393.png" alt="image" class="img-fluid">
                     </div>
                 </div>
                 <!-- row1 -->
                 <div class="row">
-                    <div class="col-lg-4 col-md-4 col-sm-12 col-12">
+                    <div class="col-lg-4 col-md-4 col-sm-12 col-12"data-aos="zoom-in-right"data-aos-offset="300">
                       <div class="card my-5 mx-2 shadow-sm">
                         <img src="./img/kasargod.jpg" class="img-fluid">
                         <div class="card-body">
@@ -83,7 +84,7 @@
                         </div>
                     </div>
                   </div>
-                  <div class="col-lg-4 col-md-4 col-sm-12 col-12">
+                  <div class="col-lg-4 col-md-4 col-sm-12 col-12"data-aos="zoom-out"data-aos-offset="300">
                     <div class="card my-5 mx-2 shadow-sm">
                       <img src="./img/Kannur.jpg" class="img-fluid">
                       <div class="card-body">
@@ -96,7 +97,7 @@
                       </div>
                   </div>
                 </div>
-                <div class="col-lg-4 col-md-4 col-sm-12 col-12">
+                <div class="col-lg-4 col-md-4 col-sm-12 col-12"data-aos="zoom-in-left"data-aos-offset="300">
                   <div class="card my-5 mx-2 shadow-sm">
                     <img src="./img/wayanad.jpg" class="img-fluid">
                     <div class="card-body">
@@ -114,7 +115,7 @@
             <!-- row1 -->
             <!-- row2 -->
             <div class="row">
-                <div class="col-lg-4 col-md-4 col-sm-12 col-12">
+                <div class="col-lg-4 col-md-4 col-sm-12 col-12"data-aos="zoom-in-right"data-aos-offset="300">
                   <div class="card my-5 mx-2 shadow-sm">
                     <img src="./img/kozhikode.jpg" class="img-fluid">
                     <div class="card-body">
@@ -127,7 +128,7 @@
                     </div>
                 </div>
               </div>
-              <div class="col-lg-4 col-md-4 col-sm-12 col-12">
+              <div class="col-lg-4 col-md-4 col-sm-12 col-12"data-aos="zoom-out"data-aos-offset="300">
                 <div class="card my-5 mx-2 shadow-sm">
                   <img src="./img/malappuram.jpg" class="img-fluid">
                   <div class="card-body">
@@ -140,7 +141,7 @@
                   </div>
               </div>
             </div>
-            <div class="col-lg-4 col-md-4 col-sm-12 col-12">
+            <div class="col-lg-4 col-md-4 col-sm-12 col-12"data-aos="zoom-in-left"data-aos-offset="300">
               <div class="card my-5 mx-2 shadow-sm">
                 <img src="./img/Palakkad.jpg" class="img-fluid">
                 <div class="card-body">
@@ -158,7 +159,7 @@
         <!-- row2 -->
         <!-- row3 -->
         <div class="row">
-            <div class="col-lg-4 col-md-4 col-sm-12 col-12">
+            <div class="col-lg-4 col-md-4 col-sm-12 col-12"data-aos="zoom-in-right"data-aos-offset="300">
               <div class="card my-5 mx-2 shadow-sm">
                 <img src="./img/thrissur.jpg" class="img-fluid">
                 <div class="card-body">
@@ -171,7 +172,7 @@
                 </div>
             </div>
           </div>
-          <div class="col-lg-4 col-md-4 col-sm-12 col-12">
+          <div class="col-lg-4 col-md-4 col-sm-12 col-12"data-aos="zoom-out"data-aos-offset="300">
             <div class="card my-5 mx-2 shadow-sm">
               <img src="./img/Ernakulam.jpg" class="img-fluid">
               <div class="card-body">
@@ -184,7 +185,7 @@
               </div>
           </div>
         </div>
-        <div class="col-lg-4 col-md-4 col-sm-12 col-12">
+        <div class="col-lg-4 col-md-4 col-sm-12 col-12"data-aos="zoom-in-left"data-aos-offset="300">
           <div class="card my-5 mx-2 shadow-sm">
             <img src="./img/idukki.jpg" class="img-fluid">
             <div class="card-body">
@@ -202,7 +203,7 @@
         <!-- row3 -->
         <!-- row4 -->
         <div class="row">
-            <div class="col-lg-4 col-md-4 col-sm-12 col-12">
+            <div class="col-lg-4 col-md-4 col-sm-12 col-12"data-aos="zoom-in-right"data-aos-offset="100">
               <div class="card my-5 mx-2 shadow-sm">
                 <img src="./img/alappuzha.jpg" class="img-fluid">
                 <div class="card-body">
@@ -215,7 +216,7 @@
                 </div>
             </div>
           </div>
-          <div class="col-lg-4 col-md-4 col-sm-12 col-12">
+          <div class="col-lg-4 col-md-4 col-sm-12 col-12"data-aos="zoom-out"data-aos-offset="100">
             <div class="card my-5 mx-2 shadow-sm">
               <img src="./img/Kottayam.jpg" class="img-fluid">
               <div class="card-body">
@@ -228,7 +229,7 @@
               </div>
           </div>
         </div>
-        <div class="col-lg-4 col-md-4 col-sm-12 col-12">
+        <div class="col-lg-4 col-md-4 col-sm-12 col-12"data-aos="zoom-in-left"data-aos-offset="100">
           <div class="card my-5 mx-2 shadow-sm">
             <img src="./img/pathanamthitta.jpg" class="img-fluid">
             <div class="card-body">
@@ -246,7 +247,7 @@
         <!-- row4 -->
         <!-- row5 -->
         <div class="row">
-            <div class="col-lg-4 col-md-4 col-sm-12 col-12">
+            <div class="col-lg-4 col-md-4 col-sm-12 col-12"data-aos="fade-up-right"data-aos-offset="100">
               <div class="card my-5 mx-2 shadow-sm">
                 <img src="./img/Kollam.jpg" class="img-fluid">
                 <div class="card-body">
@@ -259,7 +260,7 @@
                 </div>
             </div>
           </div>
-          <div class="col-lg-4 col-md-4 col-sm-12 col-12">
+          <div class="col-lg-4 col-md-4 col-sm-12 col-12"data-aos="fade-up-left"data-aos-offset="100">
             <div class="card my-5 mx-2 shadow-sm">
               <img src="./img/trivandrum.jpg" class="img-fluid">
               <div class="card-body">
@@ -279,10 +280,13 @@
         </div>
 
         
-    </section>  
-    
+    </section> 
+    <div class="container-fluid bg-secondary text-white text-center p-2">@2023-Developed by Anand Erulinkattil</div>
 </div>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>
+  AOS.init();
+</script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
