--- a/signup.html
+++ b/signup.html
@@ -32,7 +32,7 @@
           <div class="collapse navbar-collapse px-4" id="collapsibleNavbar">
             <ul class="navbar-nav ms-auto text-center ">
               <li class="nav-item">
-                <a class="nav-link " href="about.html">Home</a>
+                <a class="nav-link " href="index.html">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="districts.html">Districts</a>
