--- a/alappuzha.html
+++ b/alappuzha.html
@@ -32,7 +32,7 @@
         </div>
        
     </div>
-    <div class="block my-3">
+    <div class="block my-3 container-fluid">
         <span class="first-letter1">A</span>
        <p>
         Alappuzha (Alleppey) is known as ‘the Venice of the East’. Offering the best tourist places in Alleppey, this charming place is the hub of Kerala’s backwaters and is home to a huge network of backwaters and more than thousand houseboats. The houseboats you find in the backwaters of Alappuzha are in fact a reworked version of the Kettuvallams of olden times. Kettuvallam is a Malayalam word, ‘Kettu’, means living structures and ‘Vallom’ means boat. In the olden days, kettuvallam or boat with a thatched roof that covers over wooden hulls was used to carry tons of rice and spices.
@@ -102,7 +102,7 @@ This is one of the biggest churches and parishes of the Archeparchy of Changanas
      
     </div>
 </div>
-<div class="googlemap text-center margin-auto py-5 mt-5">
+<div class="googlemap text-center margin-auto py-5 mt-5 container-fluid">
     <h1 class="directions" style="font-family: 'Lobster', sans-serif;" >Directions to Alappuzha</h1>
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d125922.83383615426!2d76.2597028595024!3d9.501027053020753!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b0884f1aa296b61%3A0xb84764552c41f85a!2sAlappuzha%2C%20Kerala!5e0!3m2!1sen!2sin!4v1701759501643!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
   </div>
