--- a/ernakulam.html
+++ b/ernakulam.html
@@ -32,7 +32,7 @@
         </div>
        
     </div>
-    <div class="block my-3">
+    <div class="block my-3 container-fluid">
         <span class="first-letter1">E</span>
         <p>
           rnakulam, also known as (Kochi)Cochin is the biggest city in the state of Kerala. This city is being used as a part and the gateway to India since the 14th century, and is one of the best places in South India. To explore and see the best tourist places in Kochi, steep in the rich glorious history, nurtured by the foreign powers like Arabs, Portuguese, Chinese, British, and Dutch for centuries, it’s a must visit city for those who want to learn about the rich history of the country as the Colonial India and its trading prowess during the earlier times.
@@ -109,7 +109,7 @@ with lagoons, backwaters, coconut groves and few luxury resorts.
      
     </div>
 </div>
-<div class="googlemap text-center margin-auto py-5 mt-5">
+<div class="googlemap text-center margin-auto py-5 mt-5 container-fluid">
     <h1 class="directions" style="font-family: 'Lobster', sans-serif;" >Directions to Ernakulam</h1>
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d251491.3346283154!2d76.14347582612973!3d9.971172356834202!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b080d08f976f3a9%3A0xe9cdb444f06ed454!2sErnakulam%2C%20Kerala!5e0!3m2!1sen!2sin!4v1701703414994!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 </div>
