--- a/idukki.html
+++ b/idukki.html
@@ -32,7 +32,7 @@
         </div>
        
     </div>
-    <div class="block my-3">
+    <div class="block my-3 container-fluid">
         <span class="first-letter1">I</span>
        <p>
         dukki, to the humankind lost in the concrete jungle, Idukki tourist places acquaints them with the splendor of nature and God’s magnificent creation. Idukki, one of the quaintest districts of Kerala, is home to a number of prominent tourist places.
@@ -100,7 +100,7 @@ The sanctuary, flanked on 3 sides by the tranquil waters of Idukki Lake, is hous
      
     </div>
 </div>
-<div class="googlemap text-center margin-auto py-5 mt-5">
+<div class="googlemap text-center margin-auto py-5 mt-5 container-fluid">
     <h1 class="directions" style="font-family: 'Lobster', sans-serif;" >Directions to Idukki</h1>
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d251600.8706935131!2d76.76478226829914!3d9.828213610660676!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b07ba0629a53371%3A0x102eac43fef8626!2sIdukki%2C%20Kerala!5e0!3m2!1sen!2sin!4v1701701268177!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 </div>
