--- a/kasargod.html
+++ b/kasargod.html
@@ -32,7 +32,7 @@
         </div>
        
     </div>
-    <div class="block">
+    <div class="block container-fluid">
         <span class="first-letter1">k</span>
         <p>asargod,the northernmost district of Kerala, Kasaragod is renowned for its hills, forts and water bodies. The coir and handloom industry here are extremely famous around the world. The place is also popular for its ancient temples and rich biodiversity. It is an important border district as well that regulates trade with a lot of neighbouring States. Legends regarding the district greet you at every turn on a visit here. A trip here is incomplete without visiting Bekal Fort, the most majestic and well maintained fort in South India.
             <br><br>Off the radar for commoners and the land of exquisite folk art, tourist places in Kasaragod are reserved for hardcore and offbeat travelers in troops, pair or alone any time of the day and year. Early morning while your vision is still hazy your ears will automatically attune to the blissful soundscape.
@@ -56,7 +56,7 @@
           <div class="card my-5 mx-2 shadow-sm">
             <img src="https://hblimg.mmtcdn.com/content/hubble/img/bekal/mmt/activities/m_Bekal%20Fort-3_l_345_613.jpg" class="img-fluid" style="height: 200px;" >
             <div class="card-body">
-                <div class="card-title">
+                <div class="card-title container-fluid">
                     <h2>Bekal Fort</h2><hr>
                 </div>
                 <div class="card-text">
@@ -97,7 +97,7 @@
      
     </div>
 </div>
-<div class="googlemap text-center margin-auto py-5 mt-5">
+<div class="googlemap text-center margin-auto py-5 mt-5 container-fluid">
     <h1 class="directions" style="font-family: 'Lobster', sans-serif;" >Directions to Kasargod</h1>
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d62323.87447439567!2d74.94280637652464!3d12.500102218815325!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ba482155de6aad1%3A0x3a07d5464844020a!2sKasaragod%2C%20Kerala!5e0!3m2!1sen!2sin!4v1701689819870!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 </div>
