--- a/kollam.html
+++ b/kollam.html
@@ -32,7 +32,7 @@
         </div>
        
     </div>
-    <div class="block my-3">
+    <div class="block my-3 container-fluid">
         <span class="first-letter1">K</span>
        <p>
         ollam is an ancient seaport city on the Malabar Coast of India, bordering the Laccadive Sea. It's 66 km north of Thiruvananthapuram. The city is on the Ashtamudi and Kallada rivers. Frequently referred to as Quilon, it is the gateway to Kerala's backwaters.  Kollam City is a nature lover's paradise. It boasts the state's most visited backwaters, laid-back beaches, refreshing waterfalls, islands, and impresses with its stunning spectacles and alluring charm. The view of the city from the Thangassery lighthouse towards the Kollam Port is probably the most beautiful.
@@ -100,7 +100,7 @@ The red and white painted bands around the lighthouse make it marvelous and dign
      
     </div>
 </div>
-<div class="googlemap text-center margin-auto py-5 mt-5">
+<div class="googlemap text-center margin-auto py-5 mt-5 container-fluid">
     <h1 class="directions" style="font-family: 'Lobster', sans-serif;" >Directions to Kollam</h1>
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d126135.57425498367!2d76.51267029983842!3d8.904053238827075!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b05fc5bdda9c621%3A0x8bf03195267372f7!2sKollam%2C%20Kerala!5e0!3m2!1sen!2sin!4v1701761397268!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
