--- a/kottayam.html
+++ b/kottayam.html
@@ -32,7 +32,7 @@
         </div>
        
     </div>
-    <div class="block my-3">
+    <div class="block my-3 container-fluid">
         <span class="first-letter1">K</span>
        <p>
         ottayam, With the Western Ghats to the east and the Vembanad Lake to the west, the Kottayam City is known for its extraordinary qualities. Kottayam is a cultural mecca and a scenic haven. It is an honor for the town to be the first in India to achieve 100% literacy. With its beautiful backwater stretches, highlands, verdant paddy fields, majestic hillocks, plantations and waterways, this place is sure to enchant you. In addition to its relaxing atmosphere, the lush greenery and clean air make this an ideal location for healing and relaxing activities
@@ -98,7 +98,7 @@ Poonjar Palace, Juma Masjid, Malliyoor Sree Maha Ganapathi Temple, etc. are just
      
     </div>
 </div>
-<div class="googlemap text-center margin-auto py-5 mt-5">
+<div class="googlemap text-center margin-auto py-5 mt-5 container-fluid">
     <h1 class="directions" style="font-family: 'Lobster', sans-serif;" >Directions to Kottayam</h1>
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d62944.119586061024!2d76.47939257838344!3d9.594623365553913!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b062ba16c6b435f%3A0xbe2b02f68f8dd06e!2sKottayam%2C%20Kerala!5e0!3m2!1sen!2sin!4v1701761863430!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
