--- a/malappuram.html
+++ b/malappuram.html
@@ -32,7 +32,7 @@
         </div>
        
     </div>
-    <div class="block my-3">
+    <div class="block my-3 container-fluid">
         <span class="first-letter1">M</span>
         <p>
           alappuram, Bounded by the Nilgiris hills on the East and the Arabian Sea on the west, the district of Malappuram literally the land atop the hills, is remarkable for its unique natural beauty. Perched among the undulating hills and the meandering rivers that flow to reach the coconut-fringed seacoast, the land conceals a unique and eventful history.
@@ -97,7 +97,7 @@ The hill country also contributed much to the cultural artistic traditions of th
      
     </div>
 </div>
-<div class="googlemap text-center margin-auto py-5 mt-5">
+<div class="googlemap text-center margin-auto py-5 mt-5 container-fluid">
     <h1 class="directions" style="font-family: 'Lobster', sans-serif;" >Directions to Malappuram</h1>
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d62651.02061502622!2d76.02719162070797!3d11.06194314947999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ba64a9be29b058f%3A0x23e371e0d4c30d8e!2sMalappuram%2C%20Kerala!5e0!3m2!1sen!2sin!4v1701694679742!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 </div>
