--- a/palakkad.html
+++ b/palakkad.html
@@ -32,7 +32,7 @@
         </div>
        
     </div>
-    <div class="block my-3">
+    <div class="block my-3 container-fluid">
         <span class="first-letter1">P</span>
         <p>
           alakkad derives its name from two Malayalam words Pala (a tree Alsteria scholaris) and Kadu (forest), which goes to prove that this place was once a beautiful stretch of forests covered with the sweet-scented flowers of the Pala tree. Palakkad is a land of valleys, hillocks, rivers, forests, mountain streams, and dams. Palakkad is considered as the gateway to Kerala from the north. It can also be visited along with Coimbatore tour packages.
@@ -100,7 +100,7 @@ The history of Palakkad dates back to the Paleolithic period; several megalithic
      
     </div>
 </div>
-<div class="googlemap text-center margin-auto py-5 mt-5">
+<div class="googlemap text-center margin-auto py-5 mt-5 container-fluid">
     <h1 class="directions" style="font-family: 'Lobster', sans-serif;" >Directions to Palakkad</h1>
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d62708.814751156344!2d76.61270716970189!3d10.788248692866773!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ba86dfa087d31ad%3A0xf542d6eb7a870a56!2sPalakkad%2C%20Kerala!5e0!3m2!1sen!2sin!4v1701694561888!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 </div>
