--- a/pathanamthitta.html
+++ b/pathanamthitta.html
@@ -32,7 +32,7 @@
         </div>
        
     </div>
-    <div class="block my-3">
+    <div class="block my-3 container-fluid">
         <span class="first-letter1">P</span>
        <p>
         athanamthitta,Nestled in the heart of Kerala, Pathanamthitta is a hidden gem waiting to be explored by avid travelers and nature enthusiasts. This picturesque district, blessed with a rich cultural heritage and breathtaking natural beauty, offers a diverse range of attractions that cater to the interests of every visitor. From ancient temples and tranquil backwaters to lush forests and scenic hill stations, places to visit in Pathanamthitta promise an unforgettable journey through the heart of Kerala.
@@ -96,7 +96,7 @@
      
     </div>
 </div>
-<div class="googlemap text-center margin-auto py-5 mt-5">
+<div class="googlemap text-center margin-auto py-5 mt-5 container-fluid">
     <h1 class="directions" style="font-family: 'Lobster', sans-serif;" >Directions to Pathanamthitta</h1>
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d126010.26665464914!2d76.63040054320433!3d9.260299730141488!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b06152f4f9705d7%3A0x4d93dd296d4b4abc!2sPathanamthitta%2C%20Kerala!5e0!3m2!1sen!2sin!4v1701763021798!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 </div>
