--- a/thrissur.html
+++ b/thrissur.html
@@ -32,7 +32,7 @@
         </div>
        
     </div>
-    <div class="block my-3">
+    <div class="block my-3 container-fluid">
         <span class="first-letter1">T</span>
        <p>
         hrissur, commonly referred to as Trichur, is built around a 65-acre hill called Thekkinkadu Maidaanam. It is at a distance of 304 km from Trivandrum, the capital of Kerala. For being associated with spirituality, culture and religion, Thrissur is also called the “Cultural Capital” of Kerala.
@@ -105,7 +105,7 @@ Built on the Manali River, you can find the Peechi-Vazhani Wildlife Sanctuary an
      
     </div>
 </div>
-<div class="googlemap text-center margin-auto py-5 mt-5">
+<div class="googlemap text-center margin-auto py-5 mt-5 container-fluid">
     <h1 class="directions" style="font-family: 'Lobster', sans-serif;" >Directions to Thrissur</h1>
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d125531.57912756286!2d76.14084737264147!3d10.511545763271384!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ba7ee15ed42d1bb%3A0x82e45aa016ca7db!2sThrissur%2C%20Kerala!5e0!3m2!1sen!2sin!4v1701703291459!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 </div>
