--- a/trivandrum.html
+++ b/trivandrum.html
@@ -32,7 +32,7 @@
         </div>
        
     </div>
-    <div class="block my-3">
+    <div class="block my-3 container-fluid>
         <span class="first-letter1">T</span>
        <p>
         hiruvananthapuram also known as Trivandrum! Where the rainbow mist covers the mountains of flowers, butterflies color the sky and breathtaking sight to boast of charming beaches, alluring temples, historic monuments, spectacular palaces, wonderful backwaters, and tea, coffee and spice plantations with a vintage royal taste amalgamated with the harmonious blend of contemporary and modern styles.
@@ -102,7 +102,7 @@ The tourist places in Trivandrum in houses beautiful places. The old house on th
      
     </div>
 </div>
-<div class="googlemap text-center margin-auto py-5 mt-5">
+<div class="googlemap text-center margin-auto py-5 mt-5 container-fluid">
     <h1 class="directions" style="font-family: 'Lobster', sans-serif;" >Directions to Thiruvananthapuram</h1>
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d252543.78982798007!2d76.7593492371871!3d8.499698296636106!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b05bbb805bbcd47%3A0x15439fab5c5c81cb!2sThiruvananthapuram%2C%20Kerala!5e0!3m2!1sen!2sin!4v1701758584272!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 </div>
