--- a/wayanad.html
+++ b/wayanad.html
@@ -32,7 +32,7 @@
         </div>
        
     </div>
-    <div class="block my-3">
+    <div class="block my-3 container-fluid">
         <span class="first-letter1">W</span>
         <p>
           ayanad, Known for its soothing temperature all around the year, Wayanad is the ultimate destination to escape the scorching sun of North India. This place doesn’t only offer its cool temperature but along with that, it has untouched woods, misty mountains, and long spread plantations. Often called the spice garden of India, Wayanad is laid with many tourist places and vast orchards of various spices like cardamom, Black pepper, Star Anise, Fenugreek, Black cumin and more. These green orchards of distinct spices give this place a different fragrance which is further enriched with the aroma of coffee plantation, nutrition of organic fruits and vegetables and waving paddy fields.
@@ -98,7 +98,7 @@ Having said this much about the greenery in the city, it is understood that it w
      
     </div>
 </div>
-<div class="googlemap text-center margin-auto py-5 mt-5">
+<div class="googlemap text-center margin-auto py-5 mt-5 container-fluid">
     <h1 class="directions" style="font-family: 'Lobster', sans-serif;" >Directions to Wayanad</h1>
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31254.683983177798!2d76.06670698608438!3d11.70606108777014!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ba60aca72a6f31d%3A0x80f9947968021a09!2sWayanad%2C%20Kerala!5e0!3m2!1sen!2sin!4v1701701041465!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 </div>
