--- a/signup.html
+++ b/signup.html
@@ -123,7 +123,7 @@
             
           </form>
     </div>
-    <div class="container-fluid bg-secondary text-white text-center p-2">@2023-Developed by Anand Erulinkattil</div>
+    <div class="container-fluid bg-secondary text-white text-center p-2 fixed-bottom">@2023-Developed by Anand Erulinkattil</div>
 </div>
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script>
